Updated: Search UI Switching